# native-code-python

./: README.md  docker-compose.yml
Authentication/: pom.xml
Authentication/src/main/resources/: application.yml  prod-application.yml
Authentication/src/main/resources/certs/accessToken/: mykey.pem  mykey.pem.pub
Authentication/src/main/resources/certs/refreshToken/: keypair.pem  keystore.p12
api-getway/: Dockerfile  pom.xml
api-getway/src/main/java/com/apiGetway/: ApiGetwayApplication.java  GatewayCorsConfig.java
api-getway/src/main/resources/: application.yml
cricket-service/: pom.xml
cricket-service/src/main/resources/: application.yml  docker-application.yml
eureka-service/: Dockerfile  docker-compose.yml  pom.xml
eureka-service/src/main/resources/: application.yml
javaMailServerForOtp/: Dockerfile  pom.xml
javaMailServerForOtp/src/main/resources/: application.properties  application.yml
javaMailServerForOtp/src/main/resources/certs/: publicKey.pem
mailSending/: Dockerfile  docker-compose.yml  pom.xml
mailSending/src/main/resources/: application.yml
native code/python/my-backend-project/: cookiecutter.json  pyproject.toml
order/: pom.xml
order/src/main/resources/: application.yml
question-generator/: pom.xml
question-generator/src/main/resources/: application.yml
test-service/: Dockerfile  pom.xml
test-service/src/main/resources/: application.properties  application.yml
test-service/src/main/resources/certs/: privateKey.pem  publicKey.pem
wallet-service/: pom.xml
wallet-service/src/main/resources/: application.yml
(+538 files in other folders)
