[tool.poetry]
name = "my-backend-project"
version = "0.1.0"
description = ""
authors = ["sachin <sachinmishra14848@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
cookiecutter = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
